--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-constants": "~18.0.8",
+    "expo-contacts": "^15.0.9",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
@@ -35,6 +36,7 @@
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
     "expo-network": "^8.0.7",
+    "expo-permissions": "^14.4.0",
     "expo-router": "^6.0.0",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
